htmlga p qoshildi. css ga sitillar yozildi

--- a/index.html
+++ b/index.html
@@ -11,5 +11,18 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum,
       molestias accusamus quaerat alias molestiae eligendi.
     </h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda error
+      incidunt sed excepturi harum labore nobis esse! Harum laboriosam numquam
+      cumque error repellat illo minima omnis temporibus iure explicabo quos
+      voluptatibus sequi nostrum tempore, neque itaque! Maiores illum molestias
+      error reiciendis recusandae, ratione dolores quisquam tempore odit saepe
+      eos, sapiente, accusantium dicta earum beatae nobis. Inventore natus iusto
+      quae incidunt architecto minima quisquam ipsam cupiditate laboriosam
+      excepturi quibusdam vero quia, animi quidem. Similique voluptas totam
+      rerum nemo, tempora voluptatem aut, ut repellendus nobis vitae earum ex
+      atque nulla illum ratione corporis provident expedita quia tenetur, labore
+      magni adipisci saepe? Officiis.
+    </p>
   </body>
 </html>
